0.2.0
  BugFix in parser code.
  BugFix in tab Files retrieve.
  Now tab Files shows progress bar. 
  Now Transaction dialog saves its size between calls.

0.1.0 
  Initial Proof of Concept release.